2013-08-21  Albert Graef  <aggraef@gmail.com>

	* pure.cc, runtime.cc: Improvements in the command line syntax.
	The -x option is now optional, so that a script can be invoked
	with arguments simply as 'pure script args ...'. To invoke
	multiple scripts in batch mode you now have to specify the new -b
	option. Please check the manual for details.

2013-08-17  Albert Graef  <aggraef@gmail.com>

	* configure.ac, Makefile.in, parser.yy: Rework the checks for
	Bison 3.0. Instead of a configure time check, we now check for
	Bison 3.0 at compile time, when the parser is regenerated. This
	prevents miscompilation if Bison 3.0 is installed, but we use a
	pregenerated parser (built with Bison <3.0) while building.

	* configure.ac, Makefile.in, interpreter.cc, runtime.cc: Fixes for
	mingw64 compatibility.

	* config/config.guess, config/config.sub: Update to latest
	versions. Also apply the patch from
	http://lists.gnu.org/archive/html/config-patches/2013-03/msg00000.html
	so that the proper architecture is detected on msys/mingw64
	systems.

2013-08-16  Albert Graef  <aggraef@gmail.com>

	* configure.ac: Add code to detect Bison 3.0 and enable the
	corresponding workarounds in an automatic fashion (see below).

2013-08-15  Albert Graef  <aggraef@gmail.com>

	* lexerdefs.hh, lexer.ll, parser.yy: Work around some bugs in C++
	parser code generation of Bison 3.0.

2013-08-14  Albert Graef  <aggraef@gmail.com>

	* runtime.cc (matrix_scanl, matrix_scanr): Fix gcc 4.8 warnings.

	* configure.ac, interpreter.cc/hh: LLVM 3.3 compatibility fixes

2013-07-31  Albert Graef  <aggraef@gmail.com>

	* runtime.cc/h, lib/matrices.pure: Add conversion routines between
	numeric/bigint matrices and 64 bit integer vectors.

2013-02-24  Albert Graef  <Dr.Graef@t-online.de>

	* interpreter.cc (macspecial): New built-in macros __dir__ and
	__file__ which return the directory and absolute filename of the
	current script, respectively.

2013-02-21  Albert Graef  <Dr.Graef@t-online.de>
