@@ -1,3 +1,9 @@
+2013-09-11  Albert Graef  <aggraef@gmail.com>
+
+	* printer.cc (pure_is_list): Detect cycles in lazy list structures
+	to prevent looping in the expression printer. Fixes issue #6
+	reported by ebm_boy.
+
 2013-08-21  Albert Graef  <aggraef@gmail.com>
 
 	* pure.cc, runtime.cc: Improvements in the command line syntax.
